# vanish

./: .gitignore  .prettierignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: rust.yml
core/: Cargo.toml  LICENSE  README.md  tarpaulin-report.html
core/src/: errors.rs  main.rs  reference.rs  utils.rs  utils_tests.rs
core/src/commands/: generate.rs  mod.rs  utils.rs
core/src/trust_stores/: errors.rs  firefox.rs  linux.rs  macos.rs  mod.rs  nss.rs  nss_profile.rs  utils.rs
core/src/x509/: ca_cert.rs  ca_req.rs  distinguished_name.rs  errors.rs  leaf_cert.rs  mod.rs
