[package]
name = "vanish"
version = "0.1.0"
description = "A simple config tool to make locally trusted X.509 development certificates for you domains"
edition = "2021"
license-file = "LICENSE"
author = "Shubham singh	<github: github.com/shubhexists>"
repository = "https://github.com/shubhexists/vanish"
categories = ["development-tools", "command-line-utilities", "parsing", "os", "hardware-support"]
keywords = ["https", "certificates", "localhost", "local-development", "root-ca"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10"
dirs = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
time = "0.3"
log = "0.4"