[package]
name = "vanish"
version = "0.2.1"
description = "A simple config tool to make locally trusted X.509 development certificates for your domains"
edition = "2021"
license-file = "LICENSE"
author = "Shubham singh	<github: github.com/shubhexists>"
repository = "https://github.com/shubhexists/vanish"
categories = ["development-tools", "command-line-utilities", "parsing", "os", "hardware-support"]
keywords = ["https", "certificates", "localhost", "local-development", "root-ca"]
readme = "README.md"

[dependencies]
openssl = "0.10"
clap = { version = "4.4.8", features = ["derive"] }
dirs = "5.0"
lazy_static = "1.4"
colored = "2.0"
base64 = "0.21"
tempfile = "3.3"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.7.0"